solve the problem that some button would overflow when scaling

--- a/graphSYSU/css/style.css
+++ b/graphSYSU/css/style.css
@@ -174,7 +174,7 @@ button
 {
 	position: absolute;
 	bottom: 0;
-	width: 300px;
+	width: 320px;
 	height: 40px;
 	/*border: 1px solid blue;*/
 }
